MorningProblems/full_tank-ThasankaK/test-cases/as-274-21-full_tank.py-test/Errors/006-stderr.txt
  File "/home/ubuntu/Host/MorningProblems/full_tank-ThasankaK/soln/full_tank.py", line 20
    print(refuelTime + length
         ^
SyntaxError: '(' was never closed

Expected file "test-cases/as-274-21-full_tank.py-test/Expected/006-stdout.txt" has no output file match
Expected file "test-cases/as-274-21-full_tank.py-test/Expected/006-stderr.txt" has no output file match
